# daily

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: daily.yml
config/: priority.yaml  settings.yaml
src/horror_daily/: __main__.py  cli.py  config.py  models.py
src/horror_daily/collectors/: base.py  rss.py  steam.py
src/horror_daily/pipeline/: dedupe.py  priority.py  report.py  scoring.py  validation.py
src/horror_daily/services/: db.py  deepseek.py  http.py  logging.py  mailer.py  prices.py  retry.py
src/horror_daily/templates/: readable_report.md.j2  report.html.j2
tests/: test_config.py  test_dedupe.py  test_deepseek_helpers.py  test_http.py  test_mailer.py  test_prices.py  test_priority.py  test_report.py  test_scoring.py  test_steam_collector.py  test_validation.py
